mumps: new test suite

--- a/mingw-w64-mumps/PKGBUILD
+++ b/mingw-w64-mumps/PKGBUILD
@@ -30,7 +30,7 @@ _realname=mumps
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=5.7.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Sparse direct SLAE solver (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -52,16 +52,18 @@ source=("https://mumps-solver.org/MUMPS_${pkgver}.tar.gz"
         "0001-makefile.inc.patch"
         "0002-skip-examples.patch"
         "0003-fix-setenv.patch"
-        "all.tcl"
-        "tclbuildtest.tcl"
-        "mumps.test")
+        "mumps.tcl"
+        "testme-0.tm"
+        "buildme-0.tm"
+        "xyz-0.tm")
 sha256sums=('84a47f7c4231b9efdf4d4f631a2cae2bdd9adeaabc088261d15af040143ed112'
             'd4e3d06c316544304ac6fefd595f20fd5865e791c9377e031fbad49b6238406c'
             'bbefd4a5f841536132f32c1ffc684a58b778901cd777445ca817dbb34d983450'
             '11609d173fc0df7b1d7269c19d5d81b2fd05a3abc57eff8ba12de1597242236c'
-            'ec5072630e1c0309fe383669e9187790cd135a393c67bc4bc35cf60b0ba396ff'
-            '277a71049b2d4cde76ca21253b253ccd7ea9e8bcfb654868c05c6bfb137d2690'
-            '58bc4cc4820cc91dc8cc67c2c95774b00c628fa56cc9c627894a5da08900b11b')
+            'aa8cc50e447eebb14492744c8be6bd8f731e0140c339a76cc31e54ea2f11813d'
+            '8d8f5670ffdf34a10b0d027bff976131824e2e6b053f8a13d207ecddd4663d6d'
+            'd0db2aa573c9aaf57b30cb3c2bd7c66e1677f3f468002f467da98b75943076b1'
+            'd52709e3663d50ed793bfe991c571ec4ea5e6eaf72fcc920e1f8ba43d0ed7050')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -131,7 +133,7 @@ package() {
     install -m644 *.h "${pkgdir}${MINGW_PREFIX}/include"
   )
   (
-    cp ${srcdir}/{all.tcl,tclbuildtest.tcl,mumps.test} ${pkgdir}${MINGW_PREFIX}/share/test/mumps
+    cp ${srcdir}/{*.tcl,*.tm} ${pkgdir}${MINGW_PREFIX}/share/test/mumps
     cd "$srcdir/${_realname}_${pkgver}/examples"
     cp c_example.c ?simpletest.F input_simpletest_* ${pkgdir}${MINGW_PREFIX}/share/test/mumps
   )
