glade: fix 32bit compiler error
g_stat uses different types than the system stat

--- a/mingw-w64-glade/PKGBUILD
+++ b/mingw-w64-glade/PKGBUILD
@@ -4,7 +4,7 @@ _realname=glade
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=3.40.0
-pkgrel=3
+pkgrel=4
 pkgdesc="User interface builder for GTK+ and GNOME (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,11 +26,15 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python: Python widgets support")
-source=(https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz)
-sha256sums=('31c9adaea849972ab9517b564e19ac19977ca97758b109edc3167008f53e3d9c')
+source=(https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz
+        "0001-fix-stat-type.patch")
+sha256sums=('31c9adaea849972ab9517b564e19ac19977ca97758b109edc3167008f53e3d9c'
+            '363bd03bb65d018a7792a33eb930f034819a69242d6d0953f8a8efcb719efe2e')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
+
+  patch -Np1 -i "${srcdir}/0001-fix-stat-type.patch"
 }
 
 build() {
