--- a/mingw-w64-bullet/PKGBUILD
+++ b/mingw-w64-bullet/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-pybullet")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
 pkgver=3.25
-pkgrel=4
+pkgrel=5
 pkgdesc="A 3D Collision Detection and Rigid Body Dynamics Library for games and animation (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,7 +22,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-freeglut"
              "${MINGW_PACKAGE_PREFIX}-openvr"
              "${MINGW_PACKAGE_PREFIX}-python3"
-             "${MINGW_PACKAGE_PREFIX}-python3-numpy")
+             "${MINGW_PACKAGE_PREFIX}-python3-numpy"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://github.com/bulletphysics/bullet3/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
         mingw-allow-shared-builds.patch
         fix-runtime-install.patch
