--- a/mingw-w64-dtc/PKGBUILD
+++ b/mingw-w64-dtc/PKGBUILD
@@ -4,7 +4,7 @@ _realname=dtc
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.7.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Device Tree Compiler"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -23,8 +23,17 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
              "${MINGW_PACKAGE_PREFIX}-swig")
-source=("https://git.kernel.org/pub/scm/utils/dtc/dtc.git/snapshot/${_realname}-${pkgver}.tar.gz")
-sha256sums=('c4c4a47b8af98ad81c488d934da051f28bd2d0143a4622ea14d1920bc8c90f75')
+source=("https://git.kernel.org/pub/scm/utils/dtc/dtc.git/snapshot/${_realname}-${pkgver}.tar.gz"
+        "0001-remove-setup-py-install.patch")
+sha256sums=('c4c4a47b8af98ad81c488d934da051f28bd2d0143a4622ea14d1920bc8c90f75'
+            '72ada7074ec472f8d06a05a1d09300a490436f8665d7a4a600d6bd56fb0d7d30')
+
+prepare() {
+  cd "${_realname}-${pkgver}"
+
+  # conflicts with the wheel build and uses deprecated setuptools install
+  patch -Np1 -i "${srcdir}/0001-remove-setup-py-install.patch"
+}
 
 build() {
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
