--- a/mingw-w64-python-ndg-httpsclient/PKGBUILD
+++ b/mingw-w64-python-ndg-httpsclient/PKGBUILD
@@ -5,7 +5,7 @@ _realname=ndg-httpsclient
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.5.1
-pkgrel=6
+pkgrel=7
 pkgdesc="Provides enhanced HTTPS support for httplib and urllib2 using PyOpenSSL (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,7 +17,7 @@ license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python-pyopenssl"
          "${MINGW_PACKAGE_PREFIX}-python-pyasn1")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("https://pypi.org/packages/source//n/${_realname}/${_pyname}-${pkgver}.tar.gz")
+source=("https://pypi.org/packages/source/n/${_realname}/${_pyname}-${pkgver}.tar.gz")
 sha256sums=('d72faed0376ab039736c2ba12e30695e2788c4aa569c9c3e3d72131de2592210')
 
 prepare() {
