--- a/mingw-w64-libde265/PKGBUILD
+++ b/mingw-w64-libde265/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libde265
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.0.15
-pkgrel=1
+pkgrel=2
 pkgdesc="Open h.265 video codec library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,12 +19,18 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 optdepends=("${MINGW_PACKAGE_PREFIX}-SDL2: for dec265 video output")
 source=("https://github.com/strukturag/libde265/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz"
+        "https://github.com/strukturag/libde265/commit/9deb12b51d52daf6bcc24ec65311745e5112357f.patch"
         "001-fix-VPATH.patch")
 sha256sums=('00251986c29d34d3af7117ed05874950c875dd9292d016be29d3b3762666511d'
+            '0ecfd831799ace1b9342f33bf03e05147adf55309de6b3413424c4585cb1c648'
             'b4cdce2b362fde574512c2fad2e479f27969c0fe4df241322d9915d189dcb763')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
+
+  # use dllexport for all Windows compilers
+  https://github.com/strukturag/libde265/commit/9deb12b51d52daf6bcc24ec65311745e5112357f
+  patch -Np1 -i "${srcdir}"/9deb12b51d52daf6bcc24ec65311745e5112357f.patch
 
   patch -p1 -i ${srcdir}/001-fix-VPATH.patch
 
