slepc: update to 3.22.1 & new test suite

--- a/mingw-w64-slepc/PKGBUILD
+++ b/mingw-w64-slepc/PKGBUILD
@@ -27,7 +27,7 @@
 _realname=slepc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=3.22.0
+pkgver=3.22.1
 pkgrel=1
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -45,14 +45,17 @@ makedepends=("python"
              "${MINGW_PACKAGE_PREFIX}-petsc-build")
 optdepends=("${MINGW_PACKAGE_PREFIX}-tcl: build & run test suite")
 source=("https://slepc.upv.es/download/distrib/${_realname}-${pkgver}.tar.gz"
-        'all.tcl'
-        'tclbuildtest.tcl'
-        'slepc.test')
+        'slepc.tcl'
+        'testme-0.tm'
+        'buildme-0.tm'
+        'xyz-0.tm')
 noextract=("${_realname}-${pkgver}.tar.gz")
-sha256sums=('45eb4d085875b50108c91fd9168ed17bc9158cc3b1e530ac843b26d9981c3db0'
-            'ec5072630e1c0309fe383669e9187790cd135a393c67bc4bc35cf60b0ba396ff'
-            '15c7af25b91406d5fe5f26cfe00963b6cfde1c3dd466eb25f1b6fae299934966'
-            '47237bd53f15e9d204b7c871ef887d9b6d11e0add1409a6eeb1a122f4b302265')
+sha256sums=('badb5cb038d09dbf1cc8f34d194673ab011c69cc46888101955c786d21c8d8c9'
+            '1c341cd82f6bd8db447a21f88ba81378605ca6b0eabc443212d53fad6113c9fe'
+            '8d8f5670ffdf34a10b0d027bff976131824e2e6b053f8a13d207ecddd4663d6d'
+            'd0db2aa573c9aaf57b30cb3c2bd7c66e1677f3f468002f467da98b75943076b1'
+            'd52709e3663d50ed793bfe991c571ec4ea5e6eaf72fcc920e1f8ba43d0ed7050')
+
 
 prepare() {
   mkdir -p $srcdir/build-${MSYSTEM} && cd $srcdir/build-${MSYSTEM}
@@ -94,7 +97,7 @@ package() {
   )
   (
     cd ${srcdir}
-    cp {all,tclbuildtest}.tcl slepc.test ${pkgdir}${MINGW_PREFIX}/share/test/${_realname}
+    cp *.tcl *.tm ${pkgdir}${MINGW_PREFIX}/share/test/${_realname}
   )
   (
     cd src/eps/tutorials
