setuptools: update to 75.3.0

--- a/mingw-w64-python-setuptools/PKGBUILD
+++ b/mingw-w64-python-setuptools/PKGBUILD
@@ -8,8 +8,8 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}"
            "${MINGW_PACKAGE_PREFIX}-python2-setuptools<42.0.2")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=75.1.0
-pkgrel=4
+pkgver=75.3.0
+pkgrel=1
 pkgdesc="Easily download, build, install, upgrade, and uninstall Python packages (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -49,8 +49,9 @@ source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realna
         '0006-fix-tests-path.patch'
         '0007-windows-arm64.patch'
         '0009-launcher-revert-symlink-resolve.patch'
-        '0010-support-py_limited_api.patch')
-sha256sums=('d59a21b17a275fb872a9c3dae73963160ae079f1049ed956880cd7c09b120538'
+        '0010-support-py_limited_api.patch'
+        '0011-add-support-for-windmc.patch')
+sha256sums=('fba5dd4d766e97be1b1681d98712680ae8f2f26d7881245f2ce9e40714f1a686'
             '7b196884ac0151801f9638dabbf9a789fa9070a3b07a4c9e625c5523e8d47387'
             'fa54581e3dddb9f4edd332dedbc101f48939a9ca5878e13cf9cf9b3408bc8c22'
             '39503256652c7c23ce07e26539e8123d269eb5c09f5d9b07e5784b2d7fb8c96f'
@@ -58,7 +59,8 @@ sha256sums=('d59a21b17a275fb872a9c3dae73963160ae079f1049ed956880cd7c09b120538'
             'dbdd96a7ead797b2db9f02dfe19ce853d3775337ccf8fd836377fe3c2a9d1c24'
             'cb897bc7292a733167fa48b5ca18323d76d3374683a7f5e9986c9df63f5332cc'
             '391d682a8b8832d7e4be3ac0c3327cfe3c8e520f16e25b43d4441df8036bf147'
-            'ccb276f9d2d26587d29ecfd4d47a3d4e96fb58738cfaf3a600a8b942c79fc439')
+            'ccb276f9d2d26587d29ecfd4d47a3d4e96fb58738cfaf3a600a8b942c79fc439'
+            'e589b5551a35b17d028d6acec4981d6ff48ee2041ec26c9b84a0cce5e661e728')
 
 prepare() {
   cd "${srcdir}/setuptools-${pkgver}"
@@ -78,6 +80,8 @@ prepare() {
 
   # https://github.com/msys2-contrib/cpython-mingw/issues/149
   patch -p1 -i ${srcdir}/0010-support-py_limited_api.patch
+
+  patch -p1 -i ${srcdir}/0011-add-support-for-windmc.patch
 
   cd "${srcdir}"
   rm -rf python-build-${MSYSTEM} | true
