bullet: Fix building with gcc-14

--- a/mingw-w64-bullet/PKGBUILD
+++ b/mingw-w64-bullet/PKGBUILD
@@ -7,14 +7,14 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-pybullet")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
 pkgver=3.25
-pkgrel=5
+pkgrel=6
 pkgdesc="A 3D Collision Detection and Rigid Body Dynamics Library for games and animation (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.bulletphysics.com/Bullet/"
+msys2_repository_url="https://github.com/bulletphysics/bullet3"
 license=('spdx:Zlib')
 install=${_realname}-${MSYSTEM}.install
-options=(!emptydirs)
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -24,6 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python3"
              "${MINGW_PACKAGE_PREFIX}-python3-numpy"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+options=(!emptydirs)
 source=("https://github.com/bulletphysics/bullet3/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
         mingw-allow-shared-builds.patch
         fix-runtime-install.patch
@@ -77,6 +78,7 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
+  CFLAGS+=" -Wno-incompatible-pointer-types"
   CXXFLAGS+=" -Wno-int-to-pointer-cast"
 
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
