--- a/mingw-w64-ruby-rake-compiler/PKGBUILD
+++ b/mingw-w64-ruby-rake-compiler/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=rake-compiler
 pkgbase="mingw-w64-ruby-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-ruby-${_realname}"
-pkgver=1.1.1
-pkgrel=2
+pkgver=1.2.8
+pkgrel=1
 pkgdesc="Rake-based Ruby Extension (C, Java) task generator (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -13,34 +13,33 @@ license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
 source=(https://rubygems.org/downloads/${_realname}-${pkgver}.gem)
 noextract=(${_realname}-$pkgver.gem)
-sha256sums=('ee6e2f06ac0ca045f80d41eb596c8f33f25415973294952351a66509027f5d87')
+sha256sums=('f314105ecb3d23d4287014d30c189cab9da14150de0201e48b99c25a04749176')
 
 check() {
   local _gemdir="$(ruby -e 'puts Gem.default_dir')"
   _gemdir="$(cygpath -u ${_gemdir})"
 
-  ${MINGW_PREFIX}/bin/gem check --verbose \
-    "${_realname}-${pkgver}.gem"
+  gem check --verbose "${_realname}-${pkgver}.gem"
 }
 
 package() {
   local _gemdir="$(${MINGW_PREFIX}/bin/ruby -e 'puts Gem.default_dir')"
   _gemdir="$(cygpath -u ${_gemdir})"
 
-  ${MINGW_PREFIX}/bin/gem install --ignore-dependencies --no-user-install --verbose \
+  gem install --ignore-dependencies --no-user-install --verbose \
     -i "${pkgdir}/${_gemdir}" -n "${pkgdir}${MINGW_PREFIX}/bin" \
     "${_realname}-${pkgver}.gem"
 
   local _ruby_exe=$(cygpath -m ${MINGW_PREFIX}/bin/ruby.exe)
 
-  #for this conversion, we want the fully qualified ruby .exe path
-  #so that we can be sure that we are calling the correct one.
+  # For this conversion, we want the fully qualified ruby.exe path
+  # so that we can be sure that we are calling the correct one.
   sed -e "s|${_ruby_exe}|${MINGW_PREFIX}/bin/ruby|g" \
       -i ${pkgdir}${MINGW_PREFIX}/bin/${_realname}
 
-  #for Win32 .bat files, we want to drop the path references as the path
-  #refs are not needed since it's involved from the same dir.  If we did
-  #need fully-qualified pathes, they would have to be fully-qualified and
+  # For Win32 .bat files, we want to drop the path references as the path
+  # refs are not needed since it's invoked from the same dir. If we did
+  # need fully-qualified paths, they would have to be fully-qualified and
   # in DOS format.
   local _inst_dir=$(cygpath -m ${pkgdir}/${MINGW_PREFIX}/bin/)
   local _w_ruby_exe=$(cygpath -w ${MINGW_PREFIX}/bin/ruby.exe | sed 's/\\/\\\\/g')
