tiled: Fix build against Qt6 6.8.0

--- a/mingw-w64-tiled/PKGBUILD
+++ b/mingw-w64-tiled/PKGBUILD
@@ -26,8 +26,15 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 optdepends=("${MINGW_PACKAGE_PREFIX}-python: Python plugin"
             "${MINGW_PACKAGE_PREFIX}-qt6-imageformats: Support for additional image formats (including WebP)"
             "${MINGW_PACKAGE_PREFIX}-qt6-translations")
-source=("$_realname-$pkgver.tar.gz::https://github.com/mapeditor/tiled/archive/v${pkgver}.tar.gz")
-sha256sums=('8ca549341fe1d13f633494fcde5880205301e6bb26ee66f307d76a2efb7e21da')
+source=("https://github.com/mapeditor/tiled/archive/v${pkgver}/$_realname-$pkgver.tar.gz"
+        "001-Fixed-compile-against-Qt-6.8.patch::https://github.com/mapeditor/tiled/commit/37013721.patch")
+sha256sums=('8ca549341fe1d13f633494fcde5880205301e6bb26ee66f307d76a2efb7e21da'
+            '5c9c2ca9ff33911ded8357a763164343281d8de39e0a58d59ae03dfe87ea2fc7')
+
+prepare() {
+  cd ${_realname}-${pkgver}
+  patch -p1 -i "${srcdir}"/001-Fixed-compile-against-Qt-6.8.patch
+}
 
 build() {
   rm -rf build-${MSYSTEM} | true
