--- a/mingw-w64-gpgme/PKGBUILD
+++ b/mingw-w64-gpgme/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
            "${MINGW_PACKAGE_PREFIX}-qgpgme-qt6" \
            "${MINGW_PACKAGE_PREFIX}-python-gpgme"))
 pkgver=1.23.2
-pkgrel=5
+pkgrel=6
 pkgdesc="A C wrapper library for GnuPG (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -40,6 +40,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "doxygen")
 source=("https://www.gnupg.org/ftp/gcrypt/${_realname}/${_realname}-${pkgver}.tar.bz2"{,.sig}
         0001-fix-find-moc-qt6.patch
+        0002-Build-Python-bindings-without-distutils.patch::"https://git.gnupg.org/cgi-bin/gitweb.cgi?p=gpgme.git;a=patch;h=5844d9e7"
+        0003-Fix-build-with-setuptools-72.2.0.patch::"https://git.gnupg.org/cgi-bin/gitweb.cgi?p=gpgme.git;a=patch;h=ecd0c86d"
         0004-gpgme-find-gnupg.patch
         0005-invoke-scripts-via-sh.patch
         0007-mkdefsinc-use-CPPFLAGS.patch
@@ -56,6 +58,8 @@ validpgpkeys=('5B80C5754298F0CB55D8ED6ABCEF7E294B092E28'
 sha256sums=('9499e8b1f33cccb6815527a1bc16049d35a6198a6c5fae0185f2bd561bce5224'
             'SKIP'
             'c5079439302d931371118117ad9a2478163c7a84bb1400a89f2437459eb70f5c'
+            '21cb8ff3f141427d5c55d388cb88c6f5774f592370719d3b632c4a8a70ff179b'
+            '69202c576f5f9980bc88bf9e963fd6199093c89ab8dc3be02ab6c460d65fe1b4'
             '0ff731656094213854877cfe8f88f4ea562a2191c708a26f567b8ecb4873d5df'
             '75f77086c96fb4bcb9edad01bf64bbf11a7ec435f751b901f3fb180b410fa236'
             'f022993b4ae8f69f8248a6e22a0b6f0d0f43a074cdbcdbe2efb479e48064f988'
@@ -78,6 +82,8 @@ prepare() {
 
   _apply_patch_with_msg \
     0001-fix-find-moc-qt6.patch \
+    0002-Build-Python-bindings-without-distutils.patch \
+    0003-Fix-build-with-setuptools-72.2.0.patch \
     0004-gpgme-find-gnupg.patch \
     0005-invoke-scripts-via-sh.patch \
     0007-mkdefsinc-use-CPPFLAGS.patch \
