python-lsp-jsonrpc: Fix dependencies

--- a/mingw-w64-python-lsp-jsonrpc/PKGBUILD
+++ b/mingw-w64-python-lsp-jsonrpc/PKGBUILD
@@ -4,7 +4,7 @@ _realname=python-lsp-jsonrpc
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
 pkgver=1.1.2
-pkgrel=2
+pkgrel=3
 pkgdesc='JSON RPC 2.0 server library (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,9 +15,7 @@ msys2_references=(
 )
 depends=(
     ${MINGW_PACKAGE_PREFIX}-python
-    ${MINGW_PACKAGE_PREFIX}-python-jsonrpc-server
-    ${MINGW_PACKAGE_PREFIX}-python-language-server
-    ${MINGW_PACKAGE_PREFIX}-python-tornado)
+    ${MINGW_PACKAGE_PREFIX}-python-ujson)
 makedepends=(
     ${MINGW_PACKAGE_PREFIX}-python-build
     ${MINGW_PACKAGE_PREFIX}-python-installer
