blender: Fix build with Python 3.12

--- a/mingw-w64-blender/PKGBUILD
+++ b/mingw-w64-blender/PKGBUILD
@@ -12,7 +12,7 @@ _realname=blender
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.0.2
-pkgrel=7
+pkgrel=8
 pkgdesc="A fully integrated 3D graphics creation suite (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -97,6 +97,7 @@ source=(https://download.blender.org/source/${_realname}-${pkgver}.tar.xz
         0014-fix-find-numpy-2.patch
         0015-mingw-python-like-msvc.patch
         0016-mingw-windres.patch
+        0017-fix-build-with-python-3.12.patch::https://github.com/blender/blender/commit/252ae702.patch
         0019-fix-casts.patch
         0020-blendthumb-build.patch
         0022-find-llvm-convert-paths.patch
@@ -129,6 +130,7 @@ sha256sums=('aaa0e729da7591cfbf45772af76345977daaa7b11a0af35d98f9313e246077a3'
             '06444eeb84d61437527d402c376024a862e60766963273868d76c604185829d1'
             '54f2569620eca6a6ad9e628a523a44bcddf96d863b749354f8bc5dd324dabeac'
             '98e61ea711a8356927d105b3e8ce0d65fb8fa62b8cfbcbc91d8d9b13f285d74b'
+            '396ff56fc87a48f80fcad4f83253f61285f4394e08bec24be7a3249f26585e33'
             'a1a2e9aa9950e4438576291518c649074b6a0c473429bc16494995a981de614b'
             '77139f37224bc9921e05394909ec4c698af3089d97d0293ec4cd3aade252858a'
             '8be734582b9980ad0a3c5a82c200767ce558084f18e3cca11947991a14b0d68a'
@@ -177,6 +179,7 @@ prepare() {
     0014-fix-find-numpy-2.patch \
     0015-mingw-python-like-msvc.patch \
     0016-mingw-windres.patch \
+    0017-fix-build-with-python-3.12.patch \
     0019-fix-casts.patch \
     0020-blendthumb-build.patch \
     0022-find-llvm-convert-paths.patch \
@@ -219,7 +222,6 @@ build() {
 
   if [[ $MINGW_PACKAGE_PREFIX != *-clang-* ]]; then
     CFLAGS+=" -Wno-incompatible-pointer-types"
-    CXXFLAGS+=" -Wno-incompatible-pointer-types"
   fi
 
   if [[ $CARCH == "aarch64" ]]; then
