setuptools: add some context for the patch

--- a/mingw-w64-python-setuptools/PKGBUILD
+++ b/mingw-w64-python-setuptools/PKGBUILD
@@ -81,6 +81,8 @@ prepare() {
   # https://github.com/msys2-contrib/cpython-mingw/issues/149
   patch -p1 -i ${srcdir}/0010-support-py_limited_api.patch
 
+  # From https://github.com/msys2-contrib/cpython-mingw/commit/b96319d3d9384c6facb2fda1c82dcd1a1b9564e3
+  # Needed for building pywin32
   patch -p1 -i ${srcdir}/0011-add-support-for-windmc.patch
 
   cd "${srcdir}"
