--- a/mingw-w64-pyside2/PKGBUILD
+++ b/mingw-w64-pyside2/PKGBUILD
@@ -48,14 +48,18 @@ source=(https://download.qt.io/official_releases/QtForPython/pyside2/PySide2-${p
         002-shiboken.patch
         003-cmake-relative-paths.patch
         004-llvm-paths.patch
-        005-python-3.12.patch)
+        010-Python-3.12-Fix-the-structure-of-class-property.patch
+        011-Support-running-PySide-on-Python-3.12.patch
+        012-Final-details-to-enable-3.12-wheel-compatibility.patch)
 noextract=("${_pkgfqn}.tar.xz")
 sha256sums=('21d6818b064834b08501180e48890e5fd87df2fb3769f80c58143457f548c408'
             '8120f1d29c4fe6928ab58d01586370af6d7c03f5a4c656d3e80ea03965a032d5'
             '8fe6965a942fd527d77d38c2a0b8e5c4f9bc1b51999f292af7a656b55a443713'
             '09c076b3fd61d8b972f05996e1383b6f31a695a8ae5db1aa6e0d9512d34db681'
             '75e720dc346d92167a6b6dde241f467ecdb1d1c4b9085843755b782f8c6c80a8'
-            '4290519a50681641076160c07ffa4399e192dd4ae77c9db8906243a25ac63cf6')
+            '77a851ed10997bd4e4990fd9d30f1a727efe4b0b0eb8c86eac9a7d712f88ec96'
+            'b47d8709ecfe7347bb0f4e55ede8d756270ccce6daf5ef18fe503237f60be1bc'
+            '6a904d070d1f25217a0ec58ce903a193369a12a5e6997ed11ccceb497aee7e66')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -75,8 +79,13 @@ prepare() {
     001-pyside.patch \
     002-shiboken.patch \
     003-cmake-relative-paths.patch \
-    004-llvm-paths.patch \
-    005-python-3.12.patch
+    004-llvm-paths.patch
+
+  # https://salsa.debian.org/qt-kde-team/qt/pyside2/-/commit/34279c27272f57c3be78ed71bde92c477bb3a894
+  apply_patch_with_msg \
+    010-Python-3.12-Fix-the-structure-of-class-property.patch \
+    011-Support-running-PySide-on-Python-3.12.patch \
+    012-Final-details-to-enable-3.12-wheel-compatibility.patch
 }
 
 build() {
