--- a/mingw-w64-python-service-identity/PKGBUILD
+++ b/mingw-w64-python-service-identity/PKGBUILD
@@ -4,7 +4,7 @@ _realname=service-identity
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=24.2.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Service Identity Verification for pyOpenSSL and cryptography (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,6 +15,8 @@ msys2_references=(
 msys2_repository_url='https://github.com/pyca/service-identity/'
 url='https://service-identity.readthedocs.io/'
 license=('spdx:MIT')
+provides=("${MINGW_PACKAGE_PREFIX}-python-service_identity")
+replaces=("${MINGW_PACKAGE_PREFIX}-python-service_identity")
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-attrs"
