python-py2exe: disable building for any environment
It is currently incompatible with Python 3.12 or newer:
https://github.com/py2exe/py2exe/issues/191

--- a/mingw-w64-python-py2exe/PKGBUILD
+++ b/mingw-w64-python-py2exe/PKGBUILD
@@ -7,7 +7,11 @@ pkgver=0.13.0.2
 pkgrel=1
 pkgdesc='A distutils extension to create standalone Windows programs from Python code (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+# py2exe is currently incompatible to Python 3.12 or newer:
+# https://github.com/py2exe/py2exe/issues/191
+# Re-enable if this is fixed upstream.
+#mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=()
 msys2_references=(
   'pypi: py2exe'
 )
