python-boto: escape backslash characters in strings

--- a/mingw-w64-python-boto/PKGBUILD
+++ b/mingw-w64-python-boto/PKGBUILD
@@ -4,20 +4,37 @@ _realname=boto
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.49.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Amazon Web Services Library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: boto'
 )
-url='https://www.somepackage.org/'
-license=('MIT')
+url='https://github.com/boto/boto/'
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('ea0d3b40a2d852767be77ca343b58a9e3a4b00d9db440efb8da74b4e58025e5a')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
+        "0001-escape-backslash-in-strings.patch")
+sha256sums=('ea0d3b40a2d852767be77ca343b58a9e3a4b00d9db440efb8da74b4e58025e5a'
+            '78da0522f7cc61e52742c5256df2ec8bf83dfd31a2a740918a7bcce7093e79d1')
+
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
+  done
+}
+
+prepare() {
+  cd "${srcdir}"/${_realname}-${pkgver}
+
+  apply_patch_with_msg \
+    0001-escape-backslash-in-strings.patch
+}
 
 build() {
   cd "${srcdir}"
