python-boto: update vendored six

--- a/mingw-w64-python-boto/PKGBUILD
+++ b/mingw-w64-python-boto/PKGBUILD
@@ -17,9 +17,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
-        "0001-escape-backslash-in-strings.patch")
+        "0001-escape-backslash-in-strings.patch"
+        "0002-update-vendored-six.patch")
 sha256sums=('ea0d3b40a2d852767be77ca343b58a9e3a4b00d9db440efb8da74b4e58025e5a'
-            '78da0522f7cc61e52742c5256df2ec8bf83dfd31a2a740918a7bcce7093e79d1')
+            '78da0522f7cc61e52742c5256df2ec8bf83dfd31a2a740918a7bcce7093e79d1'
+            '6eb5e3ad725828240a48da8e9c38ddec1d49d057439cd551762b53c2df4e01f4')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -33,7 +35,8 @@ prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
 
   apply_patch_with_msg \
-    0001-escape-backslash-in-strings.patch
+    0001-escape-backslash-in-strings.patch \
+    0002-update-vendored-six.patch
 }
 
 build() {
