python-boto: makedepends on `python-zombie-imp`

--- a/mingw-w64-python-boto/PKGBUILD
+++ b/mingw-w64-python-boto/PKGBUILD
@@ -15,7 +15,8 @@ url='https://github.com/boto/boto/'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
+             "${MINGW_PACKAGE_PREFIX}-python-zombie-imp")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         "0001-escape-backslash-in-strings.patch"
         "0002-update-vendored-six.patch")
