python-jsonrpc-server: unbundle vendored versioneer
The bundled version is outdated and incompatible with Python 3.12.

--- a/mingw-w64-python-jsonrpc-server/PKGBUILD
+++ b/mingw-w64-python-jsonrpc-server/PKGBUILD
@@ -4,7 +4,7 @@ _realname=jsonrpc-server
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.4.0
-pkgrel=6
+pkgrel=7
 pkgdesc="Python library implementing asynchronous JSON RPC server (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,7 +16,8 @@ license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-future"
          "${MINGW_PACKAGE_PREFIX}-python-ujson")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+             "${MINGW_PACKAGE_PREFIX}-python-versioneer")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-coverage"
               "${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-pytest-cov"
@@ -33,6 +34,8 @@ prepare() {
   cd "${srcdir}"/python-${_realname}-${pkgver}
   patch -p1 -i "${srcdir}/001-python-jsonrpc-server-0.4.0-fix-versioneer.patch"
   patch -p1 -i "${srcdir}/002-python-jsonrpc-server-0.4.0-fix-test.patch"
+
+  rm -rf "versioneer.py" | true
 
   cd "${srcdir}"
   rm -rf "python-build-${MSYSTEM}" | true
