python-jupyter-nbviewer: unbundle vendored versioneer
The bundled version is outdated and incompatible with Python 3.12.

--- a/mingw-w64-python-jupyter-nbviewer/PKGBUILD
+++ b/mingw-w64-python-jupyter-nbviewer/PKGBUILD
@@ -4,7 +4,7 @@ _realname=nbviewer
 pkgbase=mingw-w64-python-jupyter-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-jupyter-${_realname}
 pkgver=1.0.1
-pkgrel=5
+pkgrel=6
 pkgdesc='Render Jupyter Notebooks as static web pages (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -27,11 +27,14 @@ depends=(
 makedepends=(
     ${MINGW_PACKAGE_PREFIX}-python-setuptools
     ${MINGW_PACKAGE_PREFIX}-python-invoke
+    ${MINGW_PACKAGE_PREFIX}-python-versioneer
 )
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/jupyter/${_realname}/archive/${pkgver}.tar.gz")
 sha256sums=('2fe0b0ee8ec5c8e2e173b8f15a22e42ba583fc6d4fa60ddb7aa40e9ee972f268')
 
 prepare() {
+  rm -f "${srcdir}"/${_realname}-${pkgver}/versioneer.py | true
+
   rm -rf python-build-${MSYSTEM} | true
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
