python-scikit-learn: try to reduce the build path length
meson generated files seem to be hitting the limit. Likely because
the py platform tag with 3.12 is 4 characters longer than with 3.11.

--- a/mingw-w64-python-scikit-learn/PKGBUILD
+++ b/mingw-w64-python-scikit-learn/PKGBUILD
@@ -4,7 +4,7 @@ _realname=scikit-learn
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.5.1
-pkgrel=3
+pkgrel=4
 pkgdesc="A set of python modules for machine learning and data mining (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -50,13 +50,13 @@ prepare() {
 }
 
 build() {
-  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "${MSYSTEM}" && cd "${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation \
     -Csetup-args="-Dbuildtype=release"
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "${srcdir}/${MSYSTEM}"
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
