wasm-bindgen: add docs

--- a/mingw-w64-wasm-bindgen/PKGBUILD
+++ b/mingw-w64-wasm-bindgen/PKGBUILD
@@ -2,9 +2,10 @@
 
 _realname=wasm-bindgen
 pkgbase=mingw-w64-${_realname}
-pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
+         "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=0.2.95
-pkgrel=1
+pkgrel=2
 pkgdesc="Facilitating high-level interactions between Wasm modules and JavaScript (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,7 +13,8 @@ url='https://github.com/rustwasm/wasm-bindgen'
 license=('spdx:Apache-2.0 OR MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-rust-wasm"
          "${MINGW_PACKAGE_PREFIX}-nodejs")
-makedepends=('git')
+makedepends=("${MINGW_PACKAGE_PREFIX}-mdbook"
+             'git')
 source=("git+${url}.git#tag=${pkgver}"
         "git+https://github.com/alexcrichton/raytracer.git#commit=42faa13859f7d8d47fd18be785c108003a207786"
         "Cargo.lock")
@@ -41,6 +43,9 @@ build() {
   cd "${_realname}"
 
   cargo build --release --frozen -p wasm-bindgen-cli
+
+  cd guide
+  mdbook build
 }
 
 check() {
@@ -49,7 +54,7 @@ check() {
   cargo test --release --frozen -p wasm-bindgen-cli
 }
 
-package() {
+package_wasm-bindgen() {
   cd "${_realname}"
 
   cargo install \
@@ -61,3 +66,20 @@ package() {
 
   install -Dm644 LICENSE-{APACHE,MIT} -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/"
 }
+
+package_wasm-bindgen-docs() {
+  pkgdesc+=" (Documentation)"
+  depends=()
+  cd "${_realname}"
+  install -d "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/"
+  cp -r -t "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/" guide/book/html/*
+}
+
+# vim: set ft=bash :
+
+# generate wrappers
+for _name in "${pkgname[@]}"; do
+  _short="package_${_name#${MINGW_PACKAGE_PREFIX}-}"
+  _func="$(declare -f "${_short}")"
+  eval "${_func/#${_short}/package_${_name}}"
+done
