gimp3: Update to 3.0.0-RC1

--- a/mingw-w64-gimp3/PKGBUILD
+++ b/mingw-w64-gimp3/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=gimp3
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.99.18
-pkgrel=4
+pkgver=3.0.0-RC1
+pkgrel=1
 pkgdesc="GNU Image Manipulation Program (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -67,12 +67,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
              "${MINGW_PACKAGE_PREFIX}-libxslt"
              "${MINGW_PACKAGE_PREFIX}-qoi")
-source=("https://download.gimp.org/pub/gimp/v2.99/gimp-${pkgver}.tar.xz"
+source=("https://download.gimp.org/pub/gimp/v3.0/gimp-${pkgver}.tar.xz"
         0001-clang-rc-files-fix.patch
         0002-skip-test-env.patch
         0003-dont-install-external-files.patch
         )
-sha256sums=('8c1bb7a94ac0d4d0cde4d701d8b356387c2ecd87abbd35bbf7d222d40f6ddb6e'
+sha256sums=('b3d0b264c5e38e789faaf3417003397f3240014c59c7f417f9ca3bd39c5ffb66'
             '54b3abc136b78fd2ae9b7d2acd202fb91bf3b6c248b131f1629ca50ef2493fbe'
             '511a2a969d1ff3254b4f2453cdfbc3a86a60e2379adf9f6ed5735454a45ef6ee'
             'd0181cc5e68ade9f42869c0f147deec7da15cc9c0a7d9b78862ef02fce081688')
@@ -126,17 +126,17 @@ package() {
   ${MINGW_PREFIX}/bin/meson.exe install --destdir="${pkgdir}"
 
   # Adjust the python interpreter path
-  sed -e "s|\=.*|\=python3w.exe|g" -i "${pkgdir}${MINGW_PREFIX}"/lib/gimp/2.99/interpreters/pygimp.interp
-  sed -e "s|::python3|::python3w.exe|g" -i "${pkgdir}${MINGW_PREFIX}"/lib/gimp/2.99/interpreters/pygimp.interp
+  sed -e "s|\=.*|\=python3w.exe|g" -i "${pkgdir}${MINGW_PREFIX}"/lib/gimp/3.0/interpreters/pygimp.interp
+  sed -e "s|::python3|::python3w.exe|g" -i "${pkgdir}${MINGW_PREFIX}"/lib/gimp/3.0/interpreters/pygimp.interp
 
   # enable-default-bin uses symlinks, so disable it and copy manually instead
-  for _prog in "${pkgdir}${MINGW_PREFIX}/bin/"*-2.99.exe; do
+  for _prog in "${pkgdir}${MINGW_PREFIX}/bin/"*-3.0.exe; do
     _baseprog=$(basename "$_prog")
     install -Dm755 "${_prog}" \
-      "${pkgdir}${MINGW_PREFIX}/bin/${_baseprog//-2.99/}"
+      "${pkgdir}${MINGW_PREFIX}/bin/${_baseprog//-3.0/}"
   done
 
-  rm -f "${pkgdir}${MINGW_PREFIX}/lib/gimp/2.99/modules/*.dll.a"
+  rm -f "${pkgdir}${MINGW_PREFIX}/lib/gimp/3.0/modules/*.dll.a"
 
   install -Dm644 "${srcdir}/gimp-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
   install -Dm644 "${srcdir}/gimp-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
