jsoncpp: disable object library
- disable object library
- install license file

--- a/mingw-w64-jsoncpp/PKGBUILD
+++ b/mingw-w64-jsoncpp/PKGBUILD
@@ -4,7 +4,7 @@ _realname=jsoncpp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.9.6
-pkgrel=1
+pkgrel=2
 pkgdesc="A C++ library for interacting with JSON (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -12,7 +12,7 @@ url="https://github.com/open-source-parsers/jsoncpp"
 msys2_references=(
   "cpe: cpe:2.3:a:jsoncpp_project:jsoncpp"
 )
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -28,24 +28,23 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  [[ -d "${srcdir}/build-${MSYSTEM}" ]] && rm -rf "${srcdir}/build-${MSYSTEM}"
-  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
-
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-  ${MINGW_PREFIX}/bin/cmake \
-    -G"Ninja" \
+  cmake \
+    -GNinja \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
     -DJSONCPP_WITH_CMAKE_PACKAGE=ON \
-    -DBUILD_SHARED_LIBS=ON \
+    -DBUILD_OBJECT_LIBS=OFF \
     -DJSONCPP_WITH_TESTS=OFF \
     ${extra_config[@]} \
-    ../${_realname}-${pkgver}
+    -S ${_realname}-${pkgver} \
+    -B build-${MSYSTEM}
 
-  ${MINGW_PREFIX}/bin/cmake --build .
+  cmake --build build-${MSYSTEM}
 }
 
 package() {
-  cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install .
+  DESTDIR=${pkgdir} cmake --install build-${MSYSTEM}
+
+  install -Dm644 "${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
