Fix package version suffix

--- a/mingw-w64-gimp3/PKGBUILD
+++ b/mingw-w64-gimp3/PKGBUILD
@@ -1,9 +1,11 @@
 # Maintainer: Alexey Pavlov <Alexpux@gmail.com>
 
 _realname=gimp3
+_pkgversuffix=RC1
+_pkgver=3.0.0
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=3.0.0-RC1
+pkgver=${_pkgver}${_pkgversuffix}
 pkgrel=1
 pkgdesc="GNU Image Manipulation Program (mingw-w64)"
 arch=('any')
@@ -67,7 +69,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
              "${MINGW_PACKAGE_PREFIX}-libxslt"
              "${MINGW_PACKAGE_PREFIX}-qoi")
-source=("https://download.gimp.org/pub/gimp/v3.0/gimp-${pkgver}.tar.xz"
+source=("https://download.gimp.org/pub/gimp/v3.0/gimp-${_pkgver}-${_pkgversuffix}.tar.xz"
         0001-clang-rc-files-fix.patch
         0002-skip-test-env.patch
         0003-dont-install-external-files.patch)
@@ -85,7 +87,7 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cd "${srcdir}/gimp-${pkgver}"
+  cd "${srcdir}/gimp-${_pkgver}-${_pkgversuffix}"
   apply_patch_with_msg \
     0001-clang-rc-files-fix.patch \
     0002-skip-test-env.patch \
@@ -115,7 +117,7 @@ build() {
     -Dxcursor=disabled \
     -Dwin32-debug-console=true \
     -Denable-default-bin=disabled \
-    ../gimp-${pkgver}
+    ../gimp-${_pkgver}-${_pkgversuffix}
 
   ${MINGW_PREFIX}/bin/meson.exe compile
 }
@@ -137,6 +139,6 @@ package() {
 
   rm -f "${pkgdir}${MINGW_PREFIX}/lib/gimp/3.0/modules/*.dll.a"
 
-  install -Dm644 "${srcdir}/gimp-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
-  install -Dm644 "${srcdir}/gimp-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}/gimp-${_pkgver}-${_pkgversuffix}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}/gimp-${_pkgver}-${_pkgversuffix}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
