blender: depends on boost-libs

--- a/mingw-w64-blender/PKGBUILD
+++ b/mingw-w64-blender/PKGBUILD
@@ -12,7 +12,7 @@ _realname=blender
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.0.2
-pkgrel=8
+pkgrel=9
 pkgdesc="A fully integrated 3D graphics creation suite (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,6 +26,7 @@ license=('spdx:GPL-2.0-or-later')
 # build conflict with "${MINGW_PACKAGE_PREFIX}-glog"
 depends=("${MINGW_PACKAGE_PREFIX}-alembic"
          #"${MINGW_PACKAGE_PREFIX}-audaspace"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          #"${MINGW_PACKAGE_PREFIX}-bullet-dp"
          #"${MINGW_PACKAGE_PREFIX}-draco" It builds an internal library
          "${MINGW_PACKAGE_PREFIX}-embree"
