freecad: depends on boost-libs

--- a/mingw-w64-freecad/PKGBUILD
+++ b/mingw-w64-freecad/PKGBUILD
@@ -4,7 +4,7 @@ _realname=freecad
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.0rc2
-pkgrel=4
+pkgrel=5
 _OS_commit=91f70382
 pkgdesc="Free and Opensource multiplatform 3D parametric modeler (mingw-w64)"
 arch=('any')
@@ -16,7 +16,7 @@ msys2_references=(
 )
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-coin"
          "${MINGW_PACKAGE_PREFIX}-fmt"
          "${MINGW_PACKAGE_PREFIX}-freetype"
@@ -38,6 +38,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-eigen3"
              "${MINGW_PACKAGE_PREFIX}-python-matplotlib"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools"
