--- a/mingw-w64-i2pd/PKGBUILD
+++ b/mingw-w64-i2pd/PKGBUILD
@@ -5,7 +5,7 @@ _realname=i2pd
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
 pkgver=2.54.0
-pkgrel=1
+pkgrel=2
 pkgdesc='A full-featured C++ implementation of the I2P router (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,14 +17,15 @@ msys2_references=(
 )
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread-git"
          "${MINGW_PACKAGE_PREFIX}-miniupnpc"
          "${MINGW_PACKAGE_PREFIX}-openssl"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja")
+             "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost")
 source=("https://github.com/PurpleI2P/i2pd/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('5c3f703417bb5f3e5dda642d39c5d30593a5dcf69d5a5ecfe82d5e8a7d454aaf')
 noextract=("${_realname}-${pkgver}.tar.gz") # symlinks
